[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Portal/Portal.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 56 )

[node name="Portal" type="Node2D"]
script = ExtResource( 1 )

[node name="Top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 38
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="Bottom" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 38
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 1 )

[node name="Bottom2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 38
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom2"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_exited" from="Top" to="." method="_on_Top_body_exited"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_exited" from="Bottom" to="." method="_on_Bottom_body_exited"]
[connection signal="body_entered" from="Bottom2" to="." method="_on_Bottom_body_entered"]
[connection signal="body_exited" from="Bottom2" to="." method="_on_Bottom_body_exited"]
